# fig2dev-os2

./: .gitignore  CHANGES  INSTALL  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  update-version_m4  version.m4
fig2dev/: Makefile.am  Makefile.in  alloc.h  arrow.c  bool.h  bound.c  bound.h  colors.c  colors.h  creationdate.c  creationdate.h  drivers.h  fig2dev.c  fig2dev.h  fig2ps2tex.csh  free.c  free.h  getopt.c  iso2tex.c  localmath.c  localmath.h  object.h  pathmax.h  pi.h  psfonts.c  read.c  read.h  read1_3.c  trans_spline.c  trans_spline.h
fig2dev/bitmaps/: Makefile.am  Makefile.in
fig2dev/dev/: Makefile.am  Makefile.in  asc85ec.c  genbitmaps.c  genbox.c  gencgm.c  gendxf.c  genemf.c  genemf.h  genepic.c  gengbx.c  genge.c  genibmgl.c  genlatex.c  genlatex.h  genmap.c  genmf.c  genmp.c  genpdf.c  genpic.c  genpict2e.c  genpictex.c  genps.c  genps.h  genpstex.c  genpstricks.c  genptk.c  genshape.c  gensvg.c  gentextyl.c  gentikz.c  gentikz.h  gentk.c  gentpic.c  picfonts.h  picpsfonts.h  psencode.c  psencode.h  psfonts.h  psimage.h  (+15 more)
fig2dev/i18n/: Makefile.am  Makefile.in
fig2dev/lib/: strchr.c  strdup.c  strndup.c  strrchr.c  strstr.c
fig2dev/tests/: Makefile.am  Makefile.in  arrows_eps.at  atlocal.in  bitmaps.at  creationdate.at  lookup_X_color.at  output.at  package.m4  pict2e.at  read_sanitize.at  svg.at  testsuite  testsuite.at  tikz.at
fig2dev/tests/data/: boxwimg.fig  fillswclip.fig  line.fig  patterns.fig
man/: Makefile.am  Makefile.in  fig2dev.1.in  fig2ps2tex.1
transfig/: Makefile.am  Makefile.in  mkfile.c  sys.c  transfig.c  transfig.h  txfile.c
